--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on PR
 'on': 
   pull_request:
     branches:
-      - main
+      - production
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
