--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "cross-env": "^7.0.3",
     "firebase": "^8.3.1",
     "nuxt": "^2.15.3",
-    "nuxt-property-decorator": "^2.9.1"
+    "nuxt-i18n": "^6.23.0",
+    "nuxt-property-decorator": "^2.9.1",
+    "vee-validate": "^3.4.5",
+    "vuex-module-decorators": "^1.0.1",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
