--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "ESNext.AsyncIterable",
       "DOM"
     ],
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
@@ -27,7 +28,7 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@types/node",
-      "@nuxtjs/auth"
+      "nuxt-i18n"
     ]
   },
   "exclude": [
